# tailray

./: .gitignore  Cargo.toml
nix/: hm-module.nix  package.nix
src/: main.rs  pkexec.rs
src/svg/: renderer.rs
src/tailscale/: mod.rs  peer.rs  status.rs  types.rs  utils.rs
src/tray/: menu.rs  utils.rs
