[package]
edition = "2021"
name = "tailray"
version = "0.2.1"
authors = [
    "d1t2 <dieterplex@gmail.com>",
    "NotAShelf <raf@notashelf.dev>"
]

[dependencies]
arboard = {version = "3.4", features = ["wl-clipboard-rs", "wayland-data-control"]}
env_logger = "0.11"
ksni = {version = "0.3", features = ["blocking"]}
log = "0.4"
notify-rust = {version = "4.11", default-features = false, features = ["d"]}
open = "5.3"
resvg = "0.44.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
which = "7.0"
whoami = "1.5"
wl-clipboard-rs = "0.9"
